fix(WinnerChecker): 스트림을 사용한 메서드 롤백
다중 우승자 처리 불가능해서 원래 버전으로 되돌림